--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   animations: ^1.1.2
   intl: ^0.16.1
   http: ^0.12.2
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
