--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ flutter:
     - assets/img/login.svg
     - assets/img/register.svg
     - assets/img/password.svg
+    - assets/img/empty-horizontal.jpg
+    - assets/img/empty-landscape.jpg
   fonts:
     - family: Raleway
       fonts:
